--- a/index.html
+++ b/index.html
@@ -14,19 +14,22 @@
         <div class="lead__header">Тестовое задание</div>
         <div class="lead__title">
           <h1 class="lead__title-text">
-            Белая береза под моим окном принакрылась снегом точно серебром
+            Белая береза
+            <img src="./images/image-1.png" alt="" class="inline-img" />под
+            <img src="./images/image-2.png" alt="" class="inline-img" /> моим
+            окном принакрылась
+            <img src="./images/image-3.png" alt="" class="inline-img" /> снегом
+            точно
+            <img src="./images/image-4.png" alt="" class="inline-img" />серебром
           </h1>
         </div>
         <div class="lead__callback">
           <button class="button__callback">
             Заказать звонок
-
             <span class="line"></span>
           </button>
         </div>
       </section>
     </main>
-
-    <!-- <script src="./pages/index.js"></script> -->
   </body>
 </html>
